feat(dm): 完善空字符串与标识符处理并接入安全格式化